# synapse

./: Cargo.toml  Makefile  README.md  memory_layout.ld
.cargo/: config.toml
.github/workflows/: build.yaml
src/: logger.rs  main.rs  page_stack.rs  pager.rs  stack.rs
src/arch/: mod.rs
src/arch/x86_64/: mod.rs
src/arch/x86_64/gdt/: mod.rs
src/arch/x86_64/idt/: handlers.rs  mod.rs
src/arch/x86_64/pager/: address_aggregator.rs  mod.rs  page_stack.rs  pager_stack_issue.txt
src/arch/x86_64/pit/: mod.rs
src/arch/x86_64/x2apic/: mod.rs
src/pager/: address_aggregator.rs  mod.rs  page_iterator.rs  page_stack.rs
