[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
satus-struct = { git = "https://github.com/dark-canvas/satus-struct" }
x86_64 = { version = "0.15.4", default-features = false, features = [ "instructions" ] }

[dev-dependencies]
mockall = "0.14.0"
