[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
satus-struct = { git = "https://github.com/dark-canvas/satus-struct" }
spin = "0.10.0"
x2apic = "0.5.0"
x86_64 = { version = "0.15.4", default-features = false, features = [ "instructions", "abi_x86_interrupt" ] }

[dev-dependencies]
mockall = "0.14.0"
